Première version affichage cooccurrents

--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -443,11 +443,11 @@
 			<scope>compile</scope>
 		</dependency>
 
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.springframework.data</groupId> -->
-<!-- 			<artifactId>spring-data-jpa</artifactId> -->
-<!-- 			<version>1.0.0.M2</version> -->
-<!-- 		</dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.data</groupId> -->
+		<!-- <artifactId>spring-data-jpa</artifactId> -->
+		<!-- <version>1.0.0.M2</version> -->
+		<!-- </dependency> -->
 
 
 		<dependency>
@@ -461,6 +461,13 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>r09</version>
+		</dependency>
+
+		<dependency>
+			<groupId>ca.usherbrooke.flsh.franqus</groupId>
+			<artifactId>analyseur</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+			<scope>compile</scope>
 		</dependency>
 	</dependencies>
 
