mise à jour ZK 5.0.8 ajout bouton exportation csv (pas encore fonctionnel) ajout zone historique de recherche (pas encore fonctionnel) les valeurs de filtres sont maintenant des listes de checkboxes (attention bug ZK / mold paging  + pageSize) toujours valeur affichée dans info reésultat ajustements cosmétiques divers

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -336,17 +336,17 @@
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zk</artifactId>
-			<version>5.0.7.1</version>
+			<version>5.0.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zul</artifactId>
-			<version>5.0.7.1</version>
+			<version>5.0.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.theme</groupId>
 			<artifactId>breeze</artifactId>
-			<version>5.0.7</version>
+			<version>5.0.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
@@ -357,9 +357,15 @@
 		<dependency>
 			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zkex</artifactId>
-			<version>5.0.7.1</version>
+			<version>5.0.8</version>
 			<type>jar</type>
 			<scope>compile</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.zkoss.zk</groupId>
+			<artifactId>zkplus</artifactId>
+			<version>5.0.8</version>
 		</dependency>
 
 		<!-- Logging -->
