- mise à jour Spring 3.1.0 - simplification annotation pour gestion des ID de type IDENTITY des @Entity - début conversion Spring Data JPA pour remplacement progressif des « Jpa*Manager » - adaptation des tests

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -401,13 +401,10 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.zkoss.spring</groupId>
+			<groupId>org.zkoss.zk</groupId>
 			<artifactId>zkspring-security</artifactId>
 			<version>3.0</version>
-			<type>jar</type>
-			<scope>compile</scope>
 		</dependency>
-
 
 
 		<!-- <dependency> -->
