--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -469,6 +469,11 @@
 			<version>1.0.3.RELEASE</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>com.beust</groupId>
+			<artifactId>jcommander</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 
