--- a/servicelibre-parent/pom.xml
+++ b/servicelibre-parent/pom.xml
@@ -341,6 +341,12 @@
 				<artifactId>common-lib</artifactId>
 				<version>1.0.0-SNAPSHOT</version>
 			</dependency>
+			<dependency>
+				<groupId>com.beust</groupId>
+				<artifactId>jcommander</artifactId>
+				<version>1.25</version>
+			</dependency>
+
 		</dependencies>
 
 
