--- a/servicelibre-parent/pom.xml
+++ b/servicelibre-parent/pom.xml
@@ -213,7 +213,11 @@
 				<artifactId>spring-aop</artifactId>
 				<version>${spring.version}</version>
 			</dependency>
-
+			<dependency>
+				<groupId>org.apache.xbean</groupId>
+				<artifactId>xbean-spring</artifactId>
+				<version>3.10</version>
+			</dependency>
 			<!-- Spring MVC -->
 			<dependency>
 				<groupId>org.springframework</groupId>
