--- a/corpus/pom.xml
+++ b/corpus/pom.xml
@@ -457,6 +457,7 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>13.0.1</version>
+			<scope>compile</scope>
 		</dependency>
 
 		<dependency>
