--- a/web/src/main/webapp/WEB-INF/web.xml
+++ b/web/src/main/webapp/WEB-INF/web.xml
@@ -51,8 +51,12 @@
 		<servlet-class>org.zkoss.zk.ui.http.DHtmlLayoutServlet</servlet-class>
 		<init-param>
 			<param-name>update-uri</param-name>
-			<param-value>/zkau</param-value>
+			<param-value>/zkau</param-value>		  
 		</init-param>
+    <init-param>
+        <param-name>log-level</param-name>
+        <param-value>FINER</param-value>
+    </init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	<servlet-mapping>
