- limitation des filtre à un rôle donné - ajout de la possibilité d'associer une remarque aux valeurs de certains filtres - possibilité de masquer sélectivement des valeurs de certains filtres - ajustement du titre des pages - gestion des mots offensants - déplacement de ressources XML

--- a/web/pom.xml
+++ b/web/pom.xml
@@ -210,8 +210,8 @@
 					<webAppConfig>
 						<!-- overridder le contexte par défaut -->
 						<contextPath>/corpus</contextPath>
-						<defaultsDescriptor>src/main/webapp/WEB-INF/webdefault.xml</defaultsDescriptor>
-						<jettyEnvXmlFile>src/main/webapp/WEB-INF/jetty-env.xml</jettyEnvXmlFile>
+						<defaultsDescriptor>src/main/resources/webdefault.xml</defaultsDescriptor>
+						<jettyEnvXmlFile>src/main/resources/jetty-env.xml</jettyEnvXmlFile>
 					</webAppConfig>
 				</configuration>
 			</plugin>
@@ -229,7 +229,7 @@
 			<resource>
 				<directory>${basedir}/src/main/resources</directory>
 				<includes>
-					<include>**/*.xml</include>
+					<include>**/logback.xml</include>
 					<include>**/*.properties</include>
 				</includes>
 				<filtering>false</filtering>
