--- a/servicelibre-parent/pom.xml
+++ b/servicelibre-parent/pom.xml
@@ -171,6 +171,12 @@
 					</exclusion>
 				</exclusions>
 			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>org.apache.lucene</groupId> -->
+<!-- 				<artifactId>lucene-analyzers-common</artifactId> -->
+<!-- 				<version>4.6.0</version> -->
+<!-- 			</dependency> -->
+			
 			<!-- Spring -->
 			<dependency>
 				<groupId>org.springframework</groupId>
